# BWT-and-FM-index

./: .gitmodules  Aligner.hpp  BWT.hpp  CMakeLists.txt  DC3.hpp  FM-index.cpp  README.md
unit_test/: Aligner_test.cpp  BWT_test.cpp  DC3_test.cpp
